# prelik-init

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ncl-validate.yml  release.yml  reusable-ncl-eval.yml
crates/cli/src/: main.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: brand.rs  common.rs  config.rs  helpers.rs  lib.rs  registry.rs  services.rs  types.rs
crates/domains/account/: Cargo.toml  domain.ncl
crates/domains/ai/: domain.ncl
crates/domains/backup/: domain.ncl
crates/domains/bootstrap/: domain.ncl
crates/domains/cloudflare/: Cargo.toml  domain.ncl
crates/domains/code-server/: Cargo.toml  domain.ncl
crates/domains/comfyui/: Cargo.toml  domain.ncl
crates/domains/connect/: domain.ncl
crates/domains/deploy/: Cargo.toml  domain.ncl
crates/domains/disk/: Cargo.toml
crates/domains/elk/: domain.ncl
crates/domains/host/: domain.ncl
crates/domains/infisical/: domain.ncl
crates/domains/iso/: Cargo.toml  domain.ncl
crates/domains/license/: Cargo.toml  domain.ncl
crates/domains/lxc/: domain.ncl
crates/domains/mail/: domain.ncl
crates/domains/manager/: domain.ncl
crates/domains/ministack/: domain.ncl
crates/domains/node/: Cargo.toml  domain.ncl
crates/domains/node/src/: main.rs
docs/: compatibility.md  phs-vs-prelik.md  uninstall.md
examples/: README.md
examples/recipes/: formbricks.toml  infisical.toml  ministack.toml  nginx.toml
ncl/: domain_contract.ncl  domains.ncl  presets.ncl
ncl/contracts/: domain.ncl
scripts/: arch-lint.sh
tests/: smoke.sh
(+52 files in other folders)
