[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/cli",
    "crates/domains/*",
]

[workspace.package]
version = "1.11.1"
edition = "2021"
authors = ["dalsoop"]
license = "MIT"
repository = "https://github.com/dalsoop/pxi-init"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "2"
dirs = "5"
which = "6"
clap_complete = "4"
dialoguer = "0.12"
pxi-core = { path = "crates/core" }
